# multi_robot_SLAM_separators

./: .gitignore  .gitmodules  README.md  setup_tx_mistlab.md
docker/: Dockerfile
docker/camera_and_slam_tx2/: Dockerfile  aliases.txt  entrypoint.sh
docker/jetson_tx_arm64/netvlad/: Dockerfile
docker/jetson_tx_arm64/opencv/: Dockerfile
docker/multi_robot_slam_tx2/: Dockerfile  readme.md
docker/multi_robot_slam_x86_no_gpu/: Dockerfile
docker/no_gpu_x86/: Dockerfile
docker/px4_communication/: Dockerfile  entrypoint.sh
docker/realsense_bionic/: Dockerfile
docker/realsense_bionic_tx2/: Dockerfile  entrypoint.sh
docker/tx2/: Dockerfile  entrypoint.sh  readme.md
docker/x86_no_gpu/: Dockerfile
image_alignement/: estimate_transform.py
image_alignement/kitti_tests/: compare_est_gt.py  evaluate_transform.py  get_groundtruth_transform.py  get_transform_est.py  settings.py
image_alignement/kitti_tests/kitti_data/KITTI_calibrations/: KITTI_00_left.yaml  KITTI_00_right.yaml  KITTI_01_left.yaml  KITTI_02_right.yaml  KITTI_03_left.yaml  KITTI_03_right.yaml  KITTI_04_left.yaml  KITTI_04_right.yaml  KITTI_05_right.yaml  KITTI_06_left.yaml  KITTI_06_right.yaml  KITTI_07_left.yaml  KITTI_07_right.yaml  KITTI_08_left.yaml  KITTI_08_right.yaml  KITTI_09_left.yaml  KITTI_09_right.yaml  KITTI_10_right.yaml  KITTI_11_left.yaml  KITTI_12_left.yaml  KITTI_12_right.yaml  KITTI_13_right.yaml  KITTI_14_left.yaml  KITTI_14_right.yaml  KITTI_15_left.yaml  KITTI_15_right.yaml  KITTI_17_left.yaml  KITTI_18_left.yaml  KITTI_18_right.yaml  KITTI_19_left.yaml  KITTI_20_left.yaml  KITTI_21_left.yaml
image_alignement/kitti_tests/my_python_tests/: compare_est_gt.py  evaluate_transform.py  experiment_one_pair.py  get_cam_mat.py  get_groundtruth_transform.py  get_transform_est.py  settings.py
image_alignement/kitti_tests/my_python_tests/old_experiments/: estimate_transform_stereo.py  (+1 more)
image_alignement/kitti_tests/old_experiments/: get_depth_map.py  transform_estimate.py
image_alignement/kitti_tests/rtabmap_transform/: CMakeLists.txt  main.cpp
image_alignement/kitti_tests/rtabmap_transform/include/: myRegistration.h  myRegistrationVis.h
image_alignement/kitti_tests/rtabmap_transform/src/: main.cpp  myRegistration.cpp  myRegistrationVis.cpp
image_alignment/docker/: Dockerfile
image_alignment/kitti_data/: find_loop_closures_kitti.py  kitti_closures.txt
image_alignment/kitti_data/KITTI_calibrations/: KITTI_01_right.yaml  KITTI_02_left.yaml  KITTI_05_left.yaml  KITTI_10_left.yaml  KITTI_11_right.yaml  KITTI_13_left.yaml  KITTI_16_left.yaml  KITTI_16_right.yaml  KITTI_17_right.yaml  KITTI_19_right.yaml  KITTI_20_right.yaml  KITTI_21_right.yaml
image_alignment/rtabmap_transform/include/: myRegistration.h
image_alignment/rtabmap_transform/src/: main.cpp  myRegistrationVis.cpp
place_rec/process_netvlad/: get_netvlad_desc.py
place_rec/process_netvlad/netvlad_tf_open/: .gitignore
process_netvlad/: get_netvlad_desc.py
ros_tools/: downsample_bag.py
ros_ws/src/multi_robot_SLAM_separators/: CMakeLists.txt  package.xml
ros_ws/src/multi_robot_separators/: CMakeLists.txt  package.xml
ros_ws/src/multi_robot_separators/cfg/: stereo_cam_tools_params.yaml
ros_ws/src/multi_robot_separators/include/multi_robot_separators/: MsgConversion.h  communication.h  factorGraph.h  logger.h  myRegistration.h  myRegistrationVis.h  stereoCamGeometricTools.h
ros_ws/src/multi_robot_separators/launch/: handheld_bag_example.launch  kitti_example.launch  multi_robot_separators.launch  multi_robot_separators_kitti.launch  multi_robot_separators_realsense_bag.launch  multi_robot_slam_example.launch  odometry_kitti.launch  odometry_realsense.launch  realsense_bag_example.launch  realsense_camera_example.launch  record_camera.launch  rtabmap_realsense.launch
ros_ws/src/multi_robot_separators/msg/: Descriptors.msg  KeyPointVec.msg
ros_ws/src/multi_robot_separators/scripts/: constants.py  data_handler.py  find_separators.py  get_netvlad_desc.py  sliceable_deque.py
ros_ws/src/multi_robot_separators/src/: MsgConversion.cpp  communication.cpp  estTransform.cpp  estTransformCall.cpp  factorGraph.cpp  getFeatsAndDesc.cpp  logger.cpp  myRegistration.cpp  myRegistrationVis.cpp  stereoCamGeometricTools.cpp
ros_ws/src/multi_robot_separators/srv/: EstTransform.srv  FindMatches.srv  GetFeatsAndDesc.srv  PoseEstimates.srv  ReceiveSeparators.srv
tools/: evaluate_communication.py
tx2_ressources/: run_batman.sh  setup_tx_mistlab.md
(+2 files in other folders)
